added row and column

--- a/.eslintrc
+++ b/.eslintrc
@@ -12,6 +12,7 @@
         "no-multiple-empty-lines": [ 2, { "max": 1, "maxEOF": 0, "maxBOF": 0 } ],
         "quotes": [ 1, "single", "avoid-escape" ],
         "no-use-before-define": [ 2, { "functions": false } ],
+        "indent": [0, "tabs"],
         "semi": [0, "never"],
         "prefer-const": 1,
         "react/prefer-es6-class": 0,
@@ -20,7 +21,6 @@
         "react/prop-types": [ 1 ],
         "react/no-array-index-key": [ 1 ],
         "class-methods-use-this": [ 1 ],
-        "no-undef": [ 1 ],
         "no-case-declarations": [ 1 ],
         "no-return-assign": [ 1 ],
         "no-param-reassign": [ 1 ],
