--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "@svgr/webpack": "4.1.0",
     "@typescript-eslint/eslint-plugin": "1.6.0",
     "@typescript-eslint/parser": "1.6.0",
+    "axios": "^0.18.0",
     "babel-eslint": "10.0.1",
     "babel-jest": "24.7.1",
     "babel-loader": "8.0.5",
@@ -34,6 +35,7 @@
     "jest-environment-jsdom-fourteen": "0.1.0",
     "jest-resolve": "24.7.1",
     "jest-watch-typeahead": "0.3.0",
+    "js-object-validation": "^1.0.16",
     "json-server": "^0.14.2",
     "mini-css-extract-plugin": "0.5.0",
     "optimize-css-assets-webpack-plugin": "5.0.1",
@@ -43,12 +45,21 @@
     "postcss-normalize": "7.0.1",
     "postcss-preset-env": "6.6.0",
     "postcss-safe-parser": "4.0.1",
+    "query-string": "^6.5.0",
     "react": "^16.8.6",
     "react-app-polyfill": "^1.0.0",
     "react-avatar": "^3.6.0",
     "react-bootstrap": "^1.0.0-beta.8",
     "react-dev-utils": "^9.0.0",
     "react-dom": "^16.8.6",
+    "react-infinite-scroll-component": "^4.5.2",
+    "react-redux": "^6.0.0",
+    "react-redux-toastr": "^7.4.7",
+    "react-router-dom": "^4.3.1",
+    "react-router-redux": "^4.0.8",
+    "redux": "^4.0.1",
+    "redux-logger": "^3.0.6",
+    "redux-thunk": "^2.3.0",
     "resolve": "1.10.0",
     "sass-loader": "7.1.0",
     "semver": "6.0.0",
