--- a/package.json
+++ b/package.json
@@ -52,7 +52,8 @@
     "react-bootstrap": "^1.0.0-beta.8",
     "react-dev-utils": "^9.0.0",
     "react-dom": "^16.8.6",
-    "react-infinite-scroll-component": "^4.5.2",
+    "react-infinite-scroll-component": "4.2.0",
+    "react-infinite-scroller": "^1.2.4",
     "react-redux": "^6.0.0",
     "react-redux-toastr": "^7.4.7",
     "react-router-dom": "^4.3.1",
